# flashpod

./: .gitignore  BUILD.md  LICENSE  README.md  flashpod  flashpod.spec  ipod_flash.py  ipodctl.c  pyproject.toml
.github/workflows/: release.yml
contrib/: 99-flashpod-firewire-ipod.rules
firmware/Gen1and2/: iPod_1.1.5.ipsw
firmware/Gen4_color/: iPod_11.1.2.1.ipsw
flashpod/: __init__.py  __main__.py  cli.py  fat32.py  fatfs.py  ipod_flash.py  itunesdb.py  resources.py
flashpod/firmware/: firmware.json
flashpod/firmware/Gen3/: iPod_2.2.3.ipsw
flashpod/firmware/Gen4_non_photo/: iPod_10.3.1.1.ipsw  iPod_4.3.1.1.ipsw
flashpod/firmware/Gen4_photo/: iPod_5.1.2.1.ipsw
flashpod/platform/: __init__.py  base.py  linux.py  macos.py  windows.py
packaging/: entry.py
packaging/linux/: README.txt  install.sh
packaging/macos/: README.txt
packaging/windows/: README.txt
scripts/: check-py36-compat.sh  test_lite_flavor.py  test_multi_ipod_detect.py
site/: README.md
wiki/: Building.md  Hardware-and-the-FireWire-bridge.md  Home.md  Managing-music-(ls-add-rm-init).md  Raw-device-access-(no-OS-mount).md  Troubleshooting.md
