[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "flashpod"
version = "0.1.5"
description = "Command-line iPod sync + card-flashing tooling for early FireWire-era iPods, pure Python"
readme = "README.md"
requires-python = ">=3.6"
license = { text = "MIT" }
authors = [{ name = "David Barnhart" }]
keywords = ["ipod", "itunesdb", "firmware", "flash", "compactflash"]
classifiers = [
    "Environment :: Console",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS :: MacOS X",
    "Operating System :: Microsoft :: Windows",
    "Programming Language :: Python :: 3",
    "Topic :: Multimedia :: Sound/Audio",
]
dependencies = ["mutagen"]

[project.urls]
Homepage = "https://github.com/davidbarnhart/flashpod"
Issues = "https://github.com/davidbarnhart/flashpod/issues"

[project.scripts]
flashpod = "flashpod.cli:main"

[tool.setuptools.packages.find]
include = ["flashpod*"]

[tool.setuptools.package-data]
# Only the firmware *catalog* and the udev rule ship in the package; the
# .ipsw images are hosted as GitHub release assets and fetched on demand
# (or supplied with --firmware).
flashpod = [
    "firmware/firmware.json",
    "contrib/*.rules",
]
