[build-system]
requires = ["setuptools>=77"]
build-backend = "setuptools.build_meta"

[project]
name = "flashpod"
version = "0.2.2"
description = "Command-line iPod sync + card-flashing tooling for early FireWire-era iPods, pure Python"
readme = "README.md"
requires-python = ">=3.6"
license = "MIT"
license-files = ["LICENSE"]
authors = [{ name = "David Barnhart" }]
keywords = ["ipod", "itunesdb", "firmware", "flash", "compactflash"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: End Users/Desktop",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Multimedia :: Sound/Audio",
    "Topic :: Utilities",
]
dependencies = ["mutagen"]

[project.urls]
Homepage = "https://github.com/davidbarnhart/flashpod"
Issues = "https://github.com/davidbarnhart/flashpod/issues"

[project.scripts]
flashpod = "flashpod.cli:main"

[tool.setuptools.packages.find]
include = ["flashpod*"]

[tool.setuptools.package-data]
# Only the firmware *catalog* and the udev rule ship in the package; the
# .ipsw images are hosted as GitHub release assets and fetched on demand
# (or supplied with --firmware).
flashpod = [
    "firmware/firmware.json",
    "contrib/*.rules",
]
